[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonrpctk"
dynamic = ["version"]
description = 'JSON-RPC Toolkit'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Ryan Kroon", email = "rykroon.tech@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/rykroon/jsonrpctk#readme"
Issues = "https://github.com/rykroon/jsonrpctk/issues"
Source = "https://github.com/rykroon/jsonrpctk"

[tool.hatch.version]
path = "src/jsonrpctk/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/jsonrpctk tests}"

[tool.coverage.run]
source_pkgs = ["jsonrpctk", "tests"]
branch = true
parallel = true
omit = [
  "src/jsonrpctk/__about__.py",
]

[tool.coverage.paths]
jsonrpctk = ["src/jsonrpctk", "*/jsonrpctk/src/jsonrpctk"]
tests = ["tests", "*/jsonrpctk/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
